--- a/src/datePicker/reset.css
+++ b/src/datePicker/reset.css
@@ -34,6 +34,8 @@
   background-color: rgb(245, 245, 245);
   font-style: normal;
   cursor: not-allowed;
+  color: rgb(100, 100, 100);
+  -webkit-text-fill-color: rgb(100 100 100);
 }
 
 .SingleDatePickerInput input {
